Fixing date snafus that lead to sealed leagues double-issuing product if the league is joined before the start date